<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/name_field_desc"/>
        <EditText
            android:id="@+id/emailEditText"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/email_field_desc"/>
        <EditText
            android:id="@+id/passwordEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/password_field_desc"/>
        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/confirm_password_field_desc"/>
        <Button
            android:id="@+id/registerButton"
            android:text="@string/register_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/register_button_desc"/>
        <TextView
            android:id="@+id/loginRedirectText"
            android:text="@string/login_redirect_text"
            android:textColor="@color/purple_700"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/login_redirect_desc"/>
        <ProgressBar
            android:id="@+id/registerProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            style="?android:attr/progressBarStyleLarge"
            android:contentDescription="@string/progress_bar_desc" />
    </LinearLayout>
</ScrollView>