<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:padding="40dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            style="?android:attr/progressBarStyleLarge"
            android:contentDescription="@string/progress_bar_desc" />

        <EditText
            android:id="@+id/loginEmail"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/loginPassword"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/loginButton"
            android:text="@string/login_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/forgotPassword"
            android:text="@string/forgot_password_text"
            android:textColor="@color/purple_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/registerRedirect"
            android:text="@string/register_redirect_text"
            android:textColor="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="24dp"/>


    </LinearLayout>
</ScrollView>
