<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- Заголовок -->
        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="-25dp"
            android:text="@string/settings_title"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <!-- Карточка профиля -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/name"
                        android:gravity="center_vertical"/>


                    <TextView
                        android:id="@+id/textFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:background="?attr/selectableItemBackground"
                        android:padding="12dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_marginTop="8dp" />
                </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">
                <Button
                    android:id="@+id/btnContracts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Мои контракты"
                    android:layout_marginTop="12dp"/>
            </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <!--Добавления шаблона отчета -->
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="-25dp"
            android:text="@string/template_title"
            android:textSize="20sp"
            android:textStyle="bold"/>
           <!-- Карточка профиля -->
           <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="30dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <LinearLayout
                    android:id="@+id/templateSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textTemplateStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Шаблон: не загружен"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btnUploadTemplate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Загрузить шаблон DOCX" />
                    <Button
                        android:id="@+id/btnDeleteTemplate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Удалить шаблон"
                        android:layout_marginTop="8dp" />

                      </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="-25dp"
            android:text="@string/account_title"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <!-- Карточка профиля -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="30dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email:"
                        android:textStyle="bold"
                        android:gravity="center_vertical"/>
                    <TextView
                        android:id="@+id/textUserEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="user@example.com"
                        android:gravity="center_vertical"/>
                </LinearLayout>
                <!-- Кнопка смены пароля -->
                <Button
                    android:id="@+id/btnChangePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Сменить пароль"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="start"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="-25dp"
            android:text="@string/theme_title"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <!-- Карточка действий -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/language"
                        android:gravity="center_vertical"/>

                    <Spinner
                        android:id="@+id/languageSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:padding="13dp"/>
                </LinearLayout>

                <!-- Тема приложения -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Тема"
                        android:gravity="center_vertical"/>
                    <Spinner
                        android:id="@+id/themeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:padding="13dp"/>
                </LinearLayout>
                <!-- Push-уведомления -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Push-уведомления"
                        android:gravity="center_vertical"/>
                    <Switch
                        android:id="@+id/switchPush"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:checked="true"/>
                </LinearLayout>




            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/logout"
            />
    </LinearLayout>
</ScrollView>
